--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.04.2022 07:31:13</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.04.2022 08:14:58</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,31 +7,24 @@
 <h5>Pátek, 22. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Polévka z červené řepy</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí paličky v sýrovém těstíčku s kroketami a tatarkou</strong>
+<strong>Znojemská hovězí pečeně s rýží NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Masovo-celerová sekaná s vařeným bramborem a hořčicí</strong>
+<strong>Bavorské vdolky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
-						</span>
-</p>
-<p>
-<strong>Karbanátek s kroketami a tatarkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							135,-
+							115,-
 						</span>
 </p>
 <p>
