--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.04.2022 08:14:58</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.04.2022 08:46:22</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 22.4.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Tiramisu</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Borůvkový cheesecake </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300g Gulášová polévka s bramborem v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Gulášová polévka s bramborem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Pečené kuřecí stehno, bylinková nádivka, červené zelí, pečený brambor <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Wrap plněný grilovanou zeleninou a sýrem halloumi, variace listových salátů, bylinkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Indicke kari s kousky rybich filetu {hejk, halibut, leskyne}, kvetakem, rajcaty,  paprikami a zazvorem, jasminova ryze 145</li><li>Italske risotto s uzenym divokym lososem, hraskem, citronem a creme fraiche 175</li><li>Kruti medailonky po jihoindicku v citronove omacce s kokosovym mlekem a zazvorem, jasminova ryze, salatek 149</li><li>Danci plec pecena na jalovci, chlupate a zemlove knedliky, listovy spenat {L} 169</li><li>Kvetakove placicky s porkem, stouchane brambory s creme fraiche, tatarska omacka {L} 145</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s jogurtovou krenovou omackou, pecene brambory, salatek 145</li><li>Peceny filet z cerstve prazmy s jogurtovou krenovou omackou, pecene brambory, salatek 175</li><li>Opekane veprove platky v omacce teryiaki s gaj coj a prazenym sezamem, jasminova ryze, salatek 145</li><li>Koroptvi prsicka plnena parmskou sunkou a ovcim syrem se susenymi rajcaty pecena na citronovem tymianu, gratinovane brambory, salatek 175</li><li>Bramborove gnocchi s ratatouille z pecene zeleniny se spetkou citronoveho tymianu a sazenym vejcem {L} 145</li></ol>
 </td>
 </tr>
 </table>
