--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.04.2022 15:06:03</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.04.2022 07:10:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 22. 04. 2022</h5>
+<h5>Sobota, 23. 04. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Polévka z červené řepy</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 22.4.2022</div>
+<div class="nadpis">Sobota 23.4.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Tiramisu</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Borůvkový cheesecake </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300g Gulášová polévka s bramborem v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka s bramborem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Pečené kuřecí stehno, bylinková nádivka, červené zelí, pečený brambor <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Wrap plněný grilovanou zeleninou a sýrem halloumi, variace listových salátů, bylinkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,51 +63,27 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Kapsa z kuřecích prsou na grilu plněná šunkou, sýrem a pórkem, mačkané brambory s cibulí</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hamburská hovězí pečeně se šunkou, kyselou okurkou, kynuté houskové knedlíky, naše šlehačka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové nudličky na jemné kari omáčce, dušená jasmínová rýže</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu , pečené brambory s kmínem, česnekový dip</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka s grilovanou zeleninou (lilkem, cuketou, červenou cibulí, karotkou a brokolicí), zakysaná smetana</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">150g </td><td class="menuName">Steak z vepřové pečeně na smetanové-sýrové omáčce, restované špecle</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný majonézovým dresinkem, smažené sýrové hranolky, vařené vejce</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený kuřecí řízek a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">150g Smažený řízek z kuřecích prsou, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">150g Steak z vepřové pečeně se třemi druhy sýra, hranolky</td><td class="menuPrice">125,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda se šlehačkou a vařeným vejcem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen 12° - Extra chmelená</td><td class="menuPrice">44,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 13° - RED ALE</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený řízek z vepřové pečeně, bramborová kaše s máslem, citron</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Štěpánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečený kuskus se zeleninou a uzeninou, vejci a smetanou, kyselá okurka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na tálu, volské oko na šunce, smažené bramborové plátky</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou, brokolicové pyré, opečená anglická slanina, vařené vejce</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili s kukuřicí a kapií zjemněné smetanou, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovou panenkou, česnekovým dresinkem, ledovým salátem, zeleninou, sýrem a kukuřicí, smažené bramborové hranolky, tatarka</td><td class="menuPrice">159,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený kuřecí řízek a 150g Steak z vepřové pečeně za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený řízek z kuřecích prsou, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z vepřové pečeně se třemi druhy sýra, hranolky</td><td class="menuPrice">125,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° - Ležák</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Staropramen 10° - Výčepní</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Pivovar Muflon 13° - RED ALE</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Cool nealko grep </td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
-<tr>
-<td>
-<table class="dm">
-<tbody>
-<tr>
-<td class="amount">100 g</td>
-<td class="title">Filátko z uzeného pstruha se salátem z černé čočky Beluga, granátovým jablkem a extra panenským olivovým olejem 4,10</td>
-<td class="pricem">169 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Krémová špenátová polévka s medvědím česnekem, restovanou panchettou a domácí tyčinkou grissini 1a,3,7</td>
-<td class="pricem">79 Kč</td>
-</tr>
-<tr>
-<td class="amount">200 g</td>
-<td class="title">Rolovaný hovězí Flank plněný listy mladé řepy, sušenými rajčaty a bylinkami s demi glace omáčkou na krémovém parmazánovém rizotu 1a,7,9</td>
-<td class="pricem">285 Kč</td>
-</tr>
-<tr>
-<td class="amount">150 g</td>
-<td class="title">Vídeňský telecí řízek smažený na přepuštěném másle s lehkým bramborovým salátem s dijonskou hořčicí a jarní cibulkou, polníček 1a,3,7,10</td>
-<td class="pricem">249 Kč</td>
-</tr>
-<tr>
-<td class="amount"></td>
-<td class="title">Limetkový cheesecake s omáčkou z lesního ovoce 1a,3,7,12</td>
-<td class="pricem">89 Kč</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
 </table>
 <table>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
